--- a/.travis.yml
+++ b/.travis.yml
@@ -141,7 +141,7 @@ jobs:
     - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
     - git checkout -b travis/${TRAVIS_BRANCH}_${TRAVIS_BUILD_NUMBER}
     - sudo -H pip install cmake-format
-    - ./ci/format-cmake.sh
+    - ./ci/format-cmake.sh .
     - git add -u
     - git diff-index --quiet HEAD || ( git commit -m "cmake-formatted by ci"
       && git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
