--- a/.travis.yml
+++ b/.travis.yml
@@ -143,10 +143,7 @@ jobs:
     - sudo -H pip install cmake-format
     script:
     - ./ci/format-cmake.sh .
-    - git add -u
-    - git diff-index --quiet HEAD || ( git commit -m "cmake-formatted by ci"
-      && git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
-      && git push --set-upstream origin-ci )
+    - ./ci/commit-if-changes.sh travis/${TRAVIS_BRANCH}_${TRAVIS_BUILD_NUMBER}
     - mkdir build-travis && cd build-travis
     - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_EXAMPLES=OFF -DSIMPLE_SOCKET_LINT=ON
     - make
