adding another dist with g++-7

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,9 @@ jobs:
     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     
   - os: linux
+    dist: bionic
+    
+  - os: linux
     addons:
       apt:
         sources:
